@@ -136,6 +136,7 @@ INSTALL_EXCLUDE_DIRS = \
 	dbg \
 	plugins \
 	'*.d' \
+	.deps \
 	$(NULL)
 
 INSTALL_EXCLUDE_FILES = \
@@ -278,6 +279,10 @@ INSTALL_EXCLUDE_FILES += \
 	$(TESTS_TARGETS) \
 	test_shell.pak \
 	xdisplaycheck \
+	$(NULL)
+
+INSTALL_EXCLUDE_DIRS += \
+	app_unittests_strings \
 	$(NULL)
 endif
 
