@@ -5,6 +5,8 @@ chromium-browser (5.0.342.9~r43360-2) UNRELEASED; urgency=low
   * Use system libevent, libicu and libxslt
     - update debian/rules
     - update debian/control
+  * Add app_unittests_strings to INSTALL_EXCLUDE_DIRS
+    - update debian/rules
 
  -- Giuseppe Iuculano <iuculano@debian.org>  Sun, 02 May 2010 12:27:03 +0200
 
